Fix font size of lang nav links on small screens

--- a/app/index.css
+++ b/app/index.css
@@ -290,7 +290,7 @@ li {
     padding: 5px 20px;
   }
 
-  .nav-link {
+  .lang-nav-link {
     font-size: .85rem;
   }
 
